--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,13 @@ keywords = ["cargo", "examples", "binaries", "workspace", "rust"]
 categories = ["command-line-utilities", "development-tools"]
 authors = ["David Horner"]
 
+[features]
+default = ["tui","concurrent"]
+tui = ["crossterm", "ratatui"]
+concurrent = ["threadpool"]
+windows = ["dep:windows"]
+equivalent = []  # alias/shortcut to --example; nothing more - other features will not apply.
+
 [lib]
 name = "cargo_e"
 path = "src/lib.rs"
@@ -37,11 +44,6 @@ toml = "0.8.20"
 tracing = "0.1.41"
 windows = { version = "0.60.0", features = ["Win32", "Win32_System_Console", "Win32_Foundation","Win32_System_SystemServices"], optional = true }
 
-[features]
-default = ["tui","concurrent","windows"]
-tui = ["crossterm", "ratatui"]
-concurrent = ["threadpool"]
-windows = ["dep:windows"]
 
 [dev-dependencies]
 assert_cmd = "2.0.16"
