--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cargo-e"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 description = "e is for Example. A command-line tool for running and exploring source, examples, and binaries from Rust projects. It will run the first example, if no options are given."
 license = "MIT OR Apache-2.0"
@@ -13,11 +13,13 @@ categories = ["command-line-utilities", "development-tools"]
 authors = ["David Horner"]
 
 [features]
-default = ["tui","concurrent"]
+default = ["tui","concurrent","funny-docs"]
 tui = ["crossterm", "ratatui"]
 concurrent = ["threadpool"]
 windows = ["dep:windows"]
 equivalent = []  # alias/shortcut to --example; nothing more - other features will not apply.
+funny-docs = ["uses_paste"]
+uses_paste = ["dep:paste"]
 
 [lib]
 name = "cargo_e"
@@ -39,6 +41,7 @@ clap = { version = "4.5.31", features = ["derive"] }
 crossterm = { version = "0.28.1", optional = true }
 ctrlc = "3.4.5"
 futures = "0.3.31"
+paste = { version = "1.0.15", optional = true }
 ratatui = { version = "0.29.0", optional = true }
 threadpool = { version = "1.8.1", optional = true }
 toml = "0.8.20"
