--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,26 +31,8 @@ funny-docs = ["uses_paste"]
 
 uses_reqwest = []
 uses_serde = []
-uses_semver = ["dep:semver"]
+# uses_semver = ["dep:semver"]
 uses_paste = ["dep:paste"]
-semver = ["dep:semver"]
-
-
-# [features]
-# default = ["tui","concurrent","funny-docs","check-version-program-start"]
-# check-version = ["check-version-program-start"]
-# check-version-program-start = ["dep:e_crate_version_checker", "uses_serde", "uses_reqwest"]
-# tui = ["crossterm", "ratatui"]
-
-# concurrent = ["dep:threadpool"]
-# windows = ["dep:windows"]
-# equivalent = []  # alias/shortcut to --example; nothing more - other features will not apply.
-# funny-docs = ["uses_paste"]
-# uses_reqwest=[]
-# uses_serde=[]
-# uses_semver=["dep:semver"]
-# uses_paste = ["dep:paste"]
-# semver = ["dep:semver"]
 
 [lib]
 name = "cargo_e"
@@ -70,8 +52,11 @@ path = "src/main.rs"
 
 [dependencies.e_crate_version_checker]
 path = "addendum/e_crate_version_checker"
+version = "0.2.0"
 optional = true
 features = ["uses_reqwest", "uses_serde"]
+
+
 
 [dependencies]
 anyhow = "1.0.97"
@@ -85,7 +70,7 @@ threadpool = { version = "1.8.1", optional = true }
 toml = "0.8.20"
 tracing = "0.1.41"
 windows = { version = "0.60.0", features = ["Win32", "Win32_System_Console", "Win32_Foundation","Win32_System_SystemServices"], optional = true }
-semver = { version = "1.0.26", optional = true }
+#semver = { version = "1.0.26", optional = true }
 
 
 [dev-dependencies]
