feat: inline addendum code and update dependencies
- Update Cargo.toml and Cargo.lock to add new dependencies: reqwest, serde, serde_json, walkdir, same-file, and winapi-util.
- Introduce the addendum_inline feature and adjust feature flags accordingly.
- Refactor e_crate_version_checker modules to inline addendum code and improve version checking tests.
- Modify interactive_crate_upgrade and main to support inline addendum usage.
- Add build_addendum_utils.rs for generating inlined module declarations.
- Add build_docs.rs to handle documentation media copying.
- Update build.rs to integrate addendum inlining and documentation build steps.

--- a/addendum/e_crate_version_checker/Cargo.toml
+++ b/addendum/e_crate_version_checker/Cargo.toml
@@ -8,9 +8,10 @@ publish = false
 [features]
 default = ["check-version","uses_reqwest","uses_serde"]
 check-version = []
+addendum_inline = []
 check-version-program-start = []
-uses_reqwest = ["dep:reqwest"]
-uses_serde = ["dep:serde","dep:serde_json"]
+uses_reqwest = ["reqwest"]
+uses_serde = ["serde", "serde_json"]
 
 [dependencies]
 reqwest = { version = "0.11", features = ["blocking", "json"], optional=true }
