--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,13 +12,14 @@ keywords = ["cargo", "examples", "binaries", "workspace", "rust"]
 categories = ["command-line-utilities", "development-tools"]
 authors = ["David Horner"]
 default-run = "cargo-e"
+include = ["src/**", "addendum/**", "Cargo.toml", "README.md"]
 
 [features]
-default = ["tui", "concurrent", "funny-docs", "check-version"]
+default = ["tui", "concurrent", "funny-docs", "check-version", "addendum_inline"]
 tui = ["crossterm", "ratatui"]
 
-check-version = ["check-version-program-start"]
-check-version-program-start = [
+ check-version = ["check-version-program-start"]
+ check-version-program-start = [
   "dep:e_crate_version_checker",
   "e_crate_version_checker/uses_reqwest",
   "e_crate_version_checker/uses_serde"
@@ -28,9 +29,10 @@ concurrent = ["dep:threadpool"]
 windows = ["dep:windows"]
 equivalent = []  # alias/shortcut to --example; nothing more - other features will not apply.
 funny-docs = ["uses_paste"]
+addendum_inline = []
+uses_reqwest = ["reqwest"]
+uses_serde = ["serde", "serde_json"]
 
-uses_reqwest = []
-uses_serde = []
 uses_paste = ["dep:paste"]
 
 [lib]
@@ -55,8 +57,6 @@ version = "0.2.0"
 optional = true
 features = ["uses_reqwest", "uses_serde"]
 
-
-
 [dependencies]
 anyhow = "1.0.97"
 clap = { version = "4.5.31", features = ["derive"] }
@@ -69,12 +69,18 @@ threadpool = { version = "1.8.1", optional = true }
 toml = "0.8.20"
 tracing = "0.1.41"
 windows = { version = "0.60.0", features = ["Win32", "Win32_System_Console", "Win32_Foundation","Win32_System_SystemServices"], optional = true }
+reqwest = { version = "0.11", optional = true, features = ["blocking", "json"] }
+serde = { version = "1.0", optional = true, features = ["derive"] }
+serde_json = { version = "1.0", optional = true }
 
 
 [dev-dependencies]
 assert_cmd = "2.0.16"
 predicate = "0.1.0"
 predicates = "3.1.3"
-regex = "1.11.1"
 tempfile = "3.18.0"
+
+[build-dependencies]
+walkdir = "2.5.0"
+regex = "1.11.1"
 
