--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,14 +12,13 @@ keywords = ["cargo", "examples", "binaries", "workspace", "rust"]
 categories = ["command-line-utilities", "development-tools"]
 authors = ["David Horner"]
 default-run = "cargo-e"
-include = ["src/**", "addendum/**", "Cargo.toml", "README.md"]
 
 [features]
-default = ["tui", "concurrent", "funny-docs", "check-version", "addendum_inline"]
+default = ["tui", "concurrent", "funny-docs", "check-version"]
 tui = ["crossterm", "ratatui"]
 
- check-version = ["check-version-program-start"]
- check-version-program-start = [
+check-version = ["check-version-program-start"]
+check-version-program-start = [
   "dep:e_crate_version_checker",
   "e_crate_version_checker/uses_reqwest",
   "e_crate_version_checker/uses_serde"
@@ -29,11 +28,29 @@ concurrent = ["dep:threadpool"]
 windows = ["dep:windows"]
 equivalent = []  # alias/shortcut to --example; nothing more - other features will not apply.
 funny-docs = ["uses_paste"]
-addendum_inline = []
-uses_reqwest = ["reqwest"]
-uses_serde = ["serde", "serde_json"]
 
+uses_reqwest = []
+uses_serde = []
+uses_semver = ["dep:semver"]
 uses_paste = ["dep:paste"]
+semver = ["dep:semver"]
+
+
+# [features]
+# default = ["tui","concurrent","funny-docs","check-version-program-start"]
+# check-version = ["check-version-program-start"]
+# check-version-program-start = ["dep:e_crate_version_checker", "uses_serde", "uses_reqwest"]
+# tui = ["crossterm", "ratatui"]
+
+# concurrent = ["dep:threadpool"]
+# windows = ["dep:windows"]
+# equivalent = []  # alias/shortcut to --example; nothing more - other features will not apply.
+# funny-docs = ["uses_paste"]
+# uses_reqwest=[]
+# uses_serde=[]
+# uses_semver=["dep:semver"]
+# uses_paste = ["dep:paste"]
+# semver = ["dep:semver"]
 
 [lib]
 name = "cargo_e"
@@ -53,7 +70,6 @@ path = "src/main.rs"
 
 [dependencies.e_crate_version_checker]
 path = "addendum/e_crate_version_checker"
-version = "0.2.0"
 optional = true
 features = ["uses_reqwest", "uses_serde"]
 
@@ -69,18 +85,13 @@ threadpool = { version = "1.8.1", optional = true }
 toml = "0.8.20"
 tracing = "0.1.41"
 windows = { version = "0.60.0", features = ["Win32", "Win32_System_Console", "Win32_Foundation","Win32_System_SystemServices"], optional = true }
-reqwest = { version = "0.11", optional = true, features = ["blocking", "json"] }
-serde = { version = "1.0", optional = true, features = ["derive"] }
-serde_json = { version = "1.0", optional = true }
+semver = { version = "1.0.26", optional = true }
 
 
 [dev-dependencies]
 assert_cmd = "2.0.16"
 predicate = "0.1.0"
 predicates = "3.1.3"
-tempfile = "3.18.0"
-
-[build-dependencies]
-walkdir = "2.5.0"
 regex = "1.11.1"
+tempfile = "3.18.0"
 
