--- a/cargo-e/Cargo.toml
+++ b/cargo-e/Cargo.toml
@@ -14,7 +14,7 @@ authors = ["David Horner"]
 default-run = "cargo-e"
 include = [
     "src/**",
-    "addendum/**",
+    "../addendum/**",
     "Cargo.toml",
     "build.rs",
     "build_addendum_utils.rs",
@@ -23,7 +23,8 @@ include = [
 ]
 
 [features]
-default = ["tui", "concurrent", "funny-docs", "check-version","addendum_inline","uses_reqwest","uses_serde"]
+# turn on check-version manually. for now.
+default = ["tui", "concurrent", "funny-docs","addendum_inline","uses_reqwest","uses_serde"]
 tui = ["crossterm", "ratatui"]
 
 check-version = ["check-version-program-start"]
