fix: update publish flag to true in Cargo.toml for e_crate_version_checker

--- a/addendum/e_crate_version_checker/Cargo.toml
+++ b/addendum/e_crate_version_checker/Cargo.toml
@@ -3,7 +3,7 @@ name = "e_crate_version_checker"
 version = "0.1.5"
 authors = ["David Horner"]
 edition = "2021"
-publish = false
+publish = true
 
 [features]
 default = ["check-version","uses_reqwest","uses_serde"]
