--- a/addendum/e_crate_version_checker/Cargo.toml
+++ b/addendum/e_crate_version_checker/Cargo.toml
@@ -1,6 +1,8 @@
 [package]
 name = "e_crate_version_checker"
-version = "0.1.5"
+description = "A tool to check for newer versions of Rust crates on crates.io and interactively update them."
+license = "MIT OR Apache-2.0"
+version = "0.1.0"
 authors = ["David Horner"]
 edition = "2021"
 publish = true
