--- a/cargo-e/Cargo.toml
+++ b/cargo-e/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cargo-e"
-version = "0.1.8"
+version = "0.1.9"
 edition = "2021"
 description = "e is for Example. A command-line tool for running and exploring source, examples, and binaries from Rust projects. It will run the first example, if no options are given."
 license = "MIT OR Apache-2.0"
@@ -82,7 +82,7 @@ path = "src/main.rs"
 # features = ["uses_reqwest", "uses_serde"]
 
 [dependencies]
-e_crate_version_checker = { path = "../addendum/e_crate_version_checker", version = "0.1.2" }
+e_crate_version_checker = { path = "../addendum/e_crate_version_checker", version = "0.1.3" }
 anyhow = "1.0.97"
 clap = { version = "4.5.31", features = ["derive"] }
 crossterm = { version = "0.28.1", optional = true }
@@ -98,6 +98,8 @@ semver = { version = "1.0.26", optional = true }
 reqwest = { version = "0.12.14", optional = true, features = ["blocking", "json"] }
 serde = { version = "1.0", optional = true, features = ["derive"] }
 serde_json = { version = "1.0", optional = true }
+env_logger = "0.11.7"
+log = "0.4.26"
 
 
 [dev-dependencies]
@@ -108,5 +110,5 @@ regex = "1.11.1"
 tempfile = "3.18.0"
 
 [build-dependencies]
-walkdir = "2.5.0"
+#walkdir = "2.5.0"
 regex = "1.11.1"
