--- a/addendum/e_crate_version_checker/Cargo.toml
+++ b/addendum/e_crate_version_checker/Cargo.toml
@@ -2,7 +2,7 @@
 name = "e_crate_version_checker"
 description = "A tool to check for newer versions of Rust crates on crates.io and interactively update them."
 license = "MIT OR Apache-2.0"
-version = "0.1.3"
+version = "0.1.4"
 authors = ["David Horner"]
 edition = "2021"
 publish = true
@@ -13,10 +13,10 @@ check-version = []
 check-version-program-start = []
 uses_reqwest = ["dep:reqwest"]
 uses_serde = ["dep:serde","dep:serde_json"]
-uses_semver = ["dep:semver"]
+# uses_semver = ["dep:semver"]
 
 [dependencies]
 reqwest = { version = "0.12", features = ["blocking", "json"], optional=true }
 serde = { version = "1.0", features = ["derive"], optional=true }
 serde_json = { version = "1.0", optional=true}
-semver = { version = "1.0.26", optional = true }
+# semver = { version = "1.0.26", optional = true }
