--- a/cargo-e/Cargo.toml
+++ b/cargo-e/Cargo.toml
@@ -19,6 +19,7 @@ include = [
     "Cargo.toml",
     "build.rs",
     "build_docs.rs",
+    "build_readme.rs",
     # other files you want to include
 ]
 
