--- a/cargo-e/Cargo.toml
+++ b/cargo-e/Cargo.toml
@@ -101,6 +101,7 @@ serde = { version = "1.0", optional = true, features = ["derive"] }
 serde_json = { version = "1.0", optional = true }
 env_logger = "0.11.7"
 log = "0.4.26"
+once_cell = "1.21.1"
 
 
 [dev-dependencies]
