--- a/cargo-e/Cargo.toml
+++ b/cargo-e/Cargo.toml
@@ -24,7 +24,7 @@ include = [
 ]
 
 [features]
-default = ["tui", "concurrent", "funny-docs","addendum_inline","uses_reqwest","uses_serde","check-version"]
+default = ["tui", "concurrent", "funny-docs","uses_reqwest","uses_serde","check-version"]
 tui = ["crossterm", "ratatui"]
 
 check-version = ["check-version-program-start"]
@@ -38,21 +38,11 @@ concurrent = ["dep:threadpool"]
 windows = ["dep:windows"]
 equivalent = []  # alias/shortcut to --example; nothing more - other features will not apply.
 funny-docs = ["uses_paste"]
-addendum_inline = []
 
 uses_reqwest = ["reqwest"]
 uses_serde = ["serde", "serde_json"]
 uses_paste = ["dep:paste"]
 
-
-# [features]
-# default = ["tui","concurrent","funny-docs","check-version-program-start"]
-# check-version = ["check-version-program-start"]
-# check-version-program-start = ["dep:e_crate_version_checker", "uses_serde", "uses_reqwest"]
-# tui = ["crossterm", "ratatui"]
-
-# concurrent = ["dep:threadpool"]
-# windows = ["dep:windows"]
 # equivalent = []  # alias/shortcut to --example; nothing more - other features will not apply.
 # funny-docs = ["uses_paste"]
 # uses_reqwest=[]
@@ -75,15 +65,8 @@ doctest = true
 name = "cargo-e"
 path = "src/main.rs"
 
-
-
-# [dependencies.e_crate_version_checker]
-# path = "addendum/e_crate_version_checker"
-# optional = true
-# features = ["uses_reqwest", "uses_serde"]
-
 [dependencies]
-e_crate_version_checker = { path = "../addendum/e_crate_version_checker", version = "0.1.5" }
+e_crate_version_checker = { path = "../addendum/e_crate_version_checker", version = "0.1.6" }
 anyhow = "1.0.97"
 clap = { version = "4.5.31", features = ["derive"] }
 crossterm = { version = "0.28.1", optional = true }
