--- a/cargo-e/Cargo.toml
+++ b/cargo-e/Cargo.toml
@@ -85,6 +85,8 @@ serde_json = { version = "1.0", optional = true }
 env_logger = "0.11.7"
 log = "0.4.26"
 once_cell = "1.21.1"
+genai = "0.1.23"
+tokio = "1.44.1"
 
 
 [dev-dependencies]
