--- a/cargo-e/Cargo.toml
+++ b/cargo-e/Cargo.toml
@@ -35,7 +35,6 @@ check-version-program-start = [
 ]
 
 concurrent = ["dep:threadpool"]
-windows = ["dep:windows"]
 equivalent = []  # alias/shortcut to --example; nothing more - other features will not apply.
 funny-docs = ["uses_paste"]
 
@@ -77,7 +76,6 @@ ratatui = { version = "0.29.0", optional = true }
 threadpool = { version = "1.8.1", optional = true }
 toml = "0.8.20"
 tracing = "0.1.41"
-windows = { version = "0.60.0", features = ["Win32", "Win32_System_Console", "Win32_Foundation","Win32_System_SystemServices"], optional = true }
 semver = { version = "1.0.26", optional = true }
 reqwest = { version = "0.12.14", optional = true, features = ["blocking", "json"] }
 serde = { version = "1.0", optional = true, features = ["derive"] }
@@ -86,13 +84,21 @@ env_logger = "0.11.7"
 log = "0.4.26"
 once_cell = "1.21.1"
 
+[target.'cfg(unix)'.dependencies]
+nix = "0.29.0"
+
+[target.'cfg(windows)'.dependencies]
+windows = { version = "0.60.0", features = ["Win32", "Win32_System_Console", "Win32_Foundation", "Win32_System_SystemServices"] }
 
 [dev-dependencies]
 assert_cmd = "2.0.16"
+genai = "0.1.23"
 predicate = "0.1.0"
 predicates = "3.1.3"
 regex = "1.11.1"
 tempfile = "3.18.0"
+tokio = "1.44.1"
+tracing-subscriber = "0.3.19"
 version-sync = "0.9.5"
 
 [build-dependencies]
