--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,4 @@
 [workspace]
 resolver = "2"
-members = ["cargo-e","addendum/e_crate_version_checker"]
+members = ["cargo-e","addendum/e_crate_version_checker", "addenda/e_genai_summarize"]
 exclude = ["addenda"]
