feat(ai-summarization): integrate GenAI summarizer & update dependencies
- Bump cargo-e version from 0.2.0 to 0.2.1, e_crate_version_checker to 0.1.11, e_ai_summarize 0.1.0 initial release.
- Add new workspace member “addendum/e_ai_summarize” with its own Cargo.toml, README, CHANGELOG, and source files.
- Introduce the new e_ai_summarize crate providing a GenAI-powered Rust code analyzer (with both CLI and interactive follow-up modes).
- Add a new binary “cargoe_ai_summarize” to run the summarizer.
- Update Cargo.lock dependency versions (e.g. clap 4.5.34, windows 0.61.1, rustyline, which, etc.) to support the new functionality.
- Enhance prompt handling by filtering for key press events only.
- Add open_ai_summarize_for_target in e_runner to spawn the AI summarization process for a given target.
- Integrate an “info” command (key 'i') into the TUI and main menu to trigger AI summarization.
- Remove obsolete test_command_builder binary.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,4 @@
 [workspace]
 resolver = "2"
-members = ["cargo-e","addendum/e_crate_version_checker"]
+members = ["cargo-e","addendum/e_crate_version_checker", "addendum/e_ai_summarize"]
 exclude = ["addenda"]
