--- a/cargo-e/Cargo.toml
+++ b/cargo-e/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cargo-e"
-version = "0.2.0"
+version = "0.2.1"
 edition = "2021"
 description = "e is for Example. A command-line tool for running and exploring source, examples, and binaries from Rust projects. It will run the first example, if no options are given."
 license = "MIT OR Apache-2.0"
@@ -24,7 +24,7 @@ include = [
 ]
 
 [features]
-default = ["tui", "concurrent", "funny-docs","uses_reqwest","uses_serde","check-version"]
+default = ["tui", "concurrent", "funny-docs","uses_reqwest","uses_serde","check-version","uses_genai"]
 tui = ["crossterm", "ratatui"]
 
 check-version = ["check-version-program-start"]
@@ -41,6 +41,7 @@ funny-docs = ["uses_paste"]
 uses_reqwest = ["reqwest"]
 uses_serde = ["serde", "serde_json"]
 uses_paste = ["dep:paste"]
+uses_genai = ["e_ai_summarize"]
 
 # equivalent = []  # alias/shortcut to --example; nothing more - other features will not apply.
 # funny-docs = ["uses_paste"]
@@ -55,17 +56,19 @@ name = "cargo_e"
 path = "src/lib.rs"
 doctest = true
 
-# [[bin]]
-# name = "cargo-e"
-# path = "src/bin/cargo-e.rs"
-# doc=true
+[[bin]]
+name = "cargoe_ai_summarize"
+path = "src/bin/cargoe_ai_summarize.rs"
+required-features = ["uses_genai"]
+
 
 [[bin]]
 name = "cargo-e"
 path = "src/main.rs"
 
 [dependencies]
-e_crate_version_checker = { path = "../addendum/e_crate_version_checker", version = "0.1.10" }
+e_crate_version_checker = { path = "../addendum/e_crate_version_checker", version = "0.1.11" }
+e_ai_summarize = { path = "../addendum/e_ai_summarize", version= "0.1.0", optional = true }
 anyhow = "1.0.97"
 clap = { version = "4.5.31", features = ["derive"] }
 crossterm = { version = "0.28.1", optional = true }
@@ -83,12 +86,15 @@ serde_json = { version = "1.0", optional = true }
 env_logger = "0.11.7"
 log = "0.4.26"
 once_cell = "1.21.1"
+tokio = "1.44.1"
+rustyline = "15.0.0"
+which = "7.0.2"
 
 [target.'cfg(unix)'.dependencies]
 nix = "0.29.0"
 
 [target.'cfg(windows)'.dependencies]
-windows = { version = "0.60.0", features = ["Win32", "Win32_System_Console", "Win32_Foundation", "Win32_System_SystemServices"] }
+windows = { version = "0.61.1", features = ["Win32", "Win32_System_Console", "Win32_Foundation", "Win32_System_SystemServices"] }
 
 [dev-dependencies]
 assert_cmd = "2.0.16"
