--- a/addendum/e_ai_summarize/Cargo.toml
+++ b/addendum/e_ai_summarize/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "e_ai_summarize"
-version = "0.1.0"
+version = "0.1.2"
 edition = "2024"
 authors = ["David Horner"]
 description = "A Rust code analyzer that summarizes functionality, crate usage, safety, and file operations."
@@ -10,16 +10,25 @@ readme = "README.md"
 publish = true
 
 [[bin]]
-name = "e-ai-summarize"
+name = "e_ai_s"
 path = "src/main.rs"
 
 [dependencies]
+anyhow = "1.0.97"
+arboard = "3.4.1"
+chrono = "0.4.40"
 clap = { version = "4.5.34", features = ["derive"] }
 env_logger = "0.11.7"
 genai = "0.1.23"
+include_dir = { version = "0.7.4", features = ["glob"] }
 log = "0.4.27"
+path-slash = "0.2.1"
+regex = "1.11.1"
 rustyline = "15.0.0"
 serde_json = "1.0.140"
 tokio = "1.44.1"
+toml = "0.8.20"
 tracing-subscriber = "0.3.19"
+walkdir = "2.5.0"
+which = "7.0.2"
 
