--- a/cargo-e/Cargo.toml
+++ b/cargo-e/Cargo.toml
@@ -89,6 +89,8 @@ once_cell = "1.21.1"
 tokio = "1.44.1"
 rustyline = "15.0.0"
 which = "7.0.2"
+cargo_metadata = "0.19.2"
+regex = "1.11.1"
 
 [target.'cfg(unix)'.dependencies]
 nix = "0.29.0"
