chore: update dependencies and improve command handling in cargo-e
- Updated regex dependency to version 1.11.1 and open to version 5.3.2 in Cargo.toml.
- Enhanced the asynchronous command output handling in e_command_builder.rs to capture and open URLs.
- Refactored event dispatch logic in e_eventdispatcher.rs to support multiline patterns and atomic state management.
- Improved Ctrl+C signal handling in process management.

--- a/cargo-e/Cargo.toml
+++ b/cargo-e/Cargo.toml
@@ -92,6 +92,7 @@ rustyline = "15.0.0"
 which = "7.0.2"
 cargo_metadata = "0.19.2"
 regex = "1.11.1"
+open = "5.3.2"
 
 [target.'cfg(unix)'.dependencies]
 nix = "0.29.0"
