--- a/addendum/e_ai_summarize/Cargo.toml
+++ b/addendum/e_ai_summarize/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "e_ai_summarize"
 version = "0.1.3"
-edition = "2024"
+edition = "2021"
+rust-version = "1.85.1"
 authors = ["David Horner"]
 description = "A Rust code analyzer that summarizes functionality, crate usage, safety, and file operations."
 license = "MIT"
