--- a/addendum/e_crate_version_checker/Cargo.toml
+++ b/addendum/e_crate_version_checker/Cargo.toml
@@ -5,6 +5,7 @@ license = "MIT OR Apache-2.0"
 version = "0.1.12"
 authors = ["David Horner"]
 edition = "2021"
+rust-version = "1.81.0"
 publish = true
 
 [features]
