--- a/cargo-e/Cargo.toml
+++ b/cargo-e/Cargo.toml
@@ -2,6 +2,7 @@
 name = "cargo-e"
 version = "0.2.8"
 edition = "2021"
+rust-version = "1.85.1"
 description = "e is for Example. A command-line tool for running and exploring source, examples, and binaries from Rust projects. It will run the first example, if no options are given."
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/davehorner/cargo-e"
