--- a/addendum/e_ai_summarize/Cargo.toml
+++ b/addendum/e_ai_summarize/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "e_ai_summarize"
-version = "0.1.4"
+version = "0.1.5"
 edition = "2021"
 rust-version = "1.85.1"
 authors = ["David Horner"]
@@ -32,4 +32,7 @@ toml = "0.8.20"
 tracing-subscriber = "0.3.19"
 walkdir = "2.5.0"
 which = "7.0.2"
+
+[dev-dependencies]
+genai = "0.1.23"
 
