--- a/cargo-e/Cargo.toml
+++ b/cargo-e/Cargo.toml
@@ -93,6 +93,9 @@ which = "7.0.2"
 cargo_metadata = "0.19.2"
 regex = "1.11.1"
 open = "5.3.2"
+sysinfo = "0.34.2"
+chrono = "0.4.40"
+nu-ansi-term = "0.50.1"
 
 [target.'cfg(unix)'.dependencies]
 nix = "0.29.0"
