--- a/cargo-e/Cargo.toml
+++ b/cargo-e/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cargo-e"
-version = "0.2.11"
+version = "0.2.12"
 edition = "2021"
 rust-version = "1.85.1"
 description = "e is for Example. A command-line tool for running and exploring source, examples, and binaries from Rust projects. It will run the first example, if no options are given."
@@ -68,11 +68,11 @@ name = "cargo-e"
 path = "src/main.rs"
 
 [dependencies]
-e_crate_version_checker = { path = "../addendum/e_crate_version_checker", version = "0.1.14" }
-e_ai_summarize = { path = "../addendum/e_ai_summarize", version = "0.1.6", optional = true }
+e_crate_version_checker = { path = "../addendum/e_crate_version_checker", version = "0.1.15" }
+e_ai_summarize = { path = "../addendum/e_ai_summarize", version = "0.1.7", optional = true }
 anyhow = "1.0.97"
 clap = { version = "4.5.31", features = ["derive"] }
-crossterm = { version = "0.28.1", optional = true }
+crossterm = { version = "0.29.0", optional = true }
 ctrlc = "3.4.5"
 futures = "0.3.31"
 paste = { version = "1.0.15", optional = true }
@@ -90,6 +90,12 @@ once_cell = "1.21.1"
 tokio = "1.44.1"
 rustyline = "15.0.0"
 which = "7.0.2"
+cargo_metadata = "0.19.2"
+regex = "1.11.1"
+open = "5.3.2"
+sysinfo = "0.34.2"
+chrono = "0.4.40"
+nu-ansi-term = "0.50.1"
 
 [target.'cfg(unix)'.dependencies]
 nix = "0.29.0"
