--- a/cargo-e/Cargo.toml
+++ b/cargo-e/Cargo.toml
@@ -25,7 +25,7 @@ include = [
 ]
 
 [features]
-default = ["tui", "concurrent", "funny-docs","uses_reqwest","uses_serde","check-version","uses_genai"]
+default = ["tui", "concurrent", "funny-docs","uses_reqwest","uses_serde","check-version","uses_genai","uses_plugins","uses_rhai"]
 tui = ["crossterm", "ratatui"]
 
 check-version = ["check-version-program-start"]
@@ -43,6 +43,13 @@ uses_reqwest = ["reqwest"]
 uses_serde = ["serde", "serde_json"]
 uses_paste = ["dep:paste"]
 uses_genai = ["e_ai_summarize"]
+
+# Plugin system support                        
+uses_plugins = [] 
+uses_rhai    = ["uses_plugins", "rhai"] 
+uses_lua     = ["uses_plugins", "mlua"] 
+uses_scotch  = ["uses_plugins", "scotch-guest-macros", "scotch-host-macros","scotch-host"]         
+uses_wasm    = ["uses_plugins", "wasmtime", "wasmtime-wasi","wasmparser"]
 
 # equivalent = []  # alias/shortcut to --example; nothing more - other features will not apply.
 # funny-docs = ["uses_paste"]
@@ -96,6 +103,17 @@ open = "5.3.2"
 sysinfo = "0.34.2"
 chrono = "0.4.40"
 nu-ansi-term = "0.50.1"
+walkdir = "2.5.0"
+
+# Optional plugin dependencies
+rhai = { version = "1.21.0", optional = true }
+mlua = { version = "0.8", features = ["lua54", "vendored"], optional = true }
+wasmtime = { version = "31.0.0", optional = true }
+wasmtime-wasi = { version = "31", features = ["preview1"], optional = true }
+wasmparser = { version = "0.229.0", optional = true }
+scotch-host = { git = "https://github.com/davehorner/scotch.git", branch = "feature/long-live-scotch", package = "scotch-host", version = "0.1.0",optional = true }
+scotch-guest-macros = { git = "https://github.com/davehorner/scotch.git", branch = "feature/long-live-scotch", package = "scotch-guest-macros", version = "0.1.0",optional = true }
+scotch-host-macros  = { git = "https://github.com/davehorner/scotch.git", branch = "feature/long-live-scotch", package = "scotch-host-macros",  version = "0.1.0",optional = true }    
 
 [target.'cfg(unix)'.dependencies]
 nix = "0.29.0"
