--- a/cargo-e/Cargo.toml
+++ b/cargo-e/Cargo.toml
@@ -25,7 +25,8 @@ include = [
 ]
 
 [features]
-default = ["tui", "concurrent", "funny-docs","uses_reqwest","uses_serde","check-version","uses_genai","uses_plugins","uses_rhai"]
+default = ["tui", "concurrent", "funny-docs","uses_reqwest","uses_serde","check-version","uses_genai"]
+# not ready for use ,"uses_plugins","uses_rhai"]
 tui = ["crossterm", "ratatui"]
 
 check-version = ["check-version-program-start"]
@@ -45,9 +46,9 @@ uses_paste = ["dep:paste"]
 uses_genai = ["e_ai_summarize"]
 
 # Plugin system support                        
-uses_plugins = [] 
+uses_plugins = ["uses_serde"]
 uses_rhai    = ["uses_plugins", "rhai"] 
-uses_lua     = ["uses_plugins", "mlua"] 
+uses_lua     = ["uses_plugins", "mlua", "uses_serde"]
 uses_scotch  = ["uses_plugins", "scotch-guest-macros", "scotch-host-macros","scotch-host"]         
 uses_wasm    = ["uses_plugins", "wasmtime", "wasmtime-wasi","wasmparser"]
 
@@ -123,7 +124,7 @@ windows = { version = "0.61.1", features = ["Win32", "Win32_System_Console", "Wi
 
 [dev-dependencies]
 assert_cmd = "2.0.16"
-genai = "0.1.23"
+genai = "0.2"
 predicate = "0.1.0"
 predicates = "3.1.3"
 regex = "1.11.1"
