--- a/cargo-e/Cargo.toml
+++ b/cargo-e/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cargo-e"
-version = "0.2.14"
+version = "0.2.15"
 edition = "2021"
 rust-version = "1.85.1"
 description = "e is for Example. A command-line tool for running and exploring source, examples, and binaries from Rust projects. It will run the first example, if no options are given."
@@ -30,14 +30,15 @@ tui = ["crossterm", "ratatui"]
 
 check-version = ["check-version-program-start"]
 check-version-program-start = [
-#  "dep:e_crate_version_checker",
-#  "e_crate_version_checker/uses_reqwest",
-#  "e_crate_version_checker/uses_serde"
+  "dep:e_crate_version_checker",
+  "e_crate_version_checker/uses_reqwest",
+  "e_crate_version_checker/uses_serde",
+  "e_crate_version_checker/changelog"
 ]
 
 concurrent = ["dep:threadpool"]
 equivalent = []  # alias/shortcut to --example; nothing more - other features will not apply.
-funny-docs = ["uses_paste"]
+funny-docs = ["uses_paste", "e_crate_version_checker/fortune", "e_crate_version_checker/changelog"]
 
 uses_reqwest = ["reqwest"]
 uses_serde = ["serde", "serde_json"]
@@ -68,7 +69,7 @@ name = "cargo-e"
 path = "src/main.rs"
 
 [dependencies]
-e_crate_version_checker = { path = "../addendum/e_crate_version_checker", version = "0.1.15" }
+e_crate_version_checker = { path = "../addendum/e_crate_version_checker", version = "0.1.16", optional = true }
 e_ai_summarize = { path = "../addendum/e_ai_summarize", version = "0.1.7", optional = true }
 anyhow = "1.0.97"
 clap = { version = "4.5.31", features = ["derive"] }
@@ -113,6 +114,7 @@ tempfile = "3.18.0"
 tokio = "1.44.1"
 tracing-subscriber = "0.3.19"
 version-sync = "0.9.5"
+parse-changelog = "0.6"
 
 [build-dependencies]
 #walkdir = "2.5.0"
