--- a/cargo-e/Cargo.toml
+++ b/cargo-e/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cargo-e"
-version = "0.2.15"
+version = "0.2.16"
 edition = "2021"
 rust-version = "1.85.1"
 description = "e is for Example. A command-line tool for running and exploring source, examples, and binaries from Rust projects. It will run the first example, if no options are given."
@@ -26,6 +26,7 @@ include = [
 
 [features]
 default = ["tui", "concurrent", "funny-docs","uses_reqwest","uses_serde","check-version","uses_genai"]
+# not ready for use ,"uses_plugins","uses_rhai"]
 tui = ["crossterm", "ratatui"]
 
 check-version = ["check-version-program-start"]
@@ -44,6 +45,13 @@ uses_reqwest = ["reqwest"]
 uses_serde = ["serde", "serde_json"]
 uses_paste = ["dep:paste"]
 uses_genai = ["e_ai_summarize"]
+
+# Plugin system support                        
+uses_plugins = ["uses_serde"]
+uses_rhai    = ["uses_plugins", "rhai"] 
+uses_lua     = ["uses_plugins", "mlua", "uses_serde"]
+uses_scotch  = ["uses_plugins", "scotch-guest-macros", "scotch-host-macros","scotch-host"]         
+uses_wasm    = ["uses_plugins", "wasmtime", "wasmtime-wasi","wasmparser"]
 
 # equivalent = []  # alias/shortcut to --example; nothing more - other features will not apply.
 # funny-docs = ["uses_paste"]
@@ -69,8 +77,8 @@ name = "cargo-e"
 path = "src/main.rs"
 
 [dependencies]
-e_crate_version_checker = { path = "../addendum/e_crate_version_checker", version = "0.1.17", optional = true }
-e_ai_summarize = { path = "../addendum/e_ai_summarize", version = "0.1.7", optional = true }
+e_crate_version_checker = { path = "../addendum/e_crate_version_checker", version = "0.1.18", optional = true }
+e_ai_summarize = { path = "../addendum/e_ai_summarize", version = "0.1.8", optional = true }
 anyhow = "1.0.97"
 clap = { version = "4.5.31", features = ["derive"] }
 crossterm = { version = "0.29.0", optional = true }
@@ -97,6 +105,17 @@ open = "5.3.2"
 sysinfo = "0.34.2"
 chrono = "0.4.40"
 nu-ansi-term = "0.50.1"
+walkdir = "2.5.0"
+
+# Optional plugin dependencies
+rhai = { version = "1.21.0", optional = true }
+mlua = { version = "0.8", features = ["lua54", "vendored"], optional = true }
+wasmtime = { version = "31.0.0", optional = true }
+wasmtime-wasi = { version = "31", features = ["preview1"], optional = true }
+wasmparser = { version = "0.229.0", optional = true }
+scotch-host = { git = "https://github.com/davehorner/scotch.git", branch = "feature/long-live-scotch", package = "scotch-host", version = "0.1.0",optional = true }
+scotch-guest-macros = { git = "https://github.com/davehorner/scotch.git", branch = "feature/long-live-scotch", package = "scotch-guest-macros", version = "0.1.0",optional = true }
+scotch-host-macros  = { git = "https://github.com/davehorner/scotch.git", branch = "feature/long-live-scotch", package = "scotch-host-macros",  version = "0.1.0",optional = true }    
 
 [target.'cfg(unix)'.dependencies]
 nix = "0.29.0"
@@ -106,7 +125,7 @@ windows = { version = "0.61.1", features = ["Win32", "Win32_System_Console", "Wi
 
 [dev-dependencies]
 assert_cmd = "2.0.16"
-genai = "0.1.23"
+genai = "0.2"
 predicate = "0.1.0"
 predicates = "3.1.3"
 regex = "1.11.1"
