--- a/cargo-e/Cargo.toml
+++ b/cargo-e/Cargo.toml
@@ -50,7 +50,7 @@ uses_genai = ["e_ai_summarize"]
 uses_plugins = ["uses_serde"]
 uses_rhai    = ["uses_plugins", "rhai"] 
 uses_lua     = ["uses_plugins", "mlua", "uses_serde"]
-uses_scotch  = ["uses_plugins", "scotch-guest-macros", "scotch-host-macros","scotch-host"]         
+# uses_scotch  = ["uses_plugins", "scotch-guest-macros", "scotch-host-macros","scotch-host"]         
 uses_wasm    = ["uses_plugins", "wasmtime", "wasmtime-wasi","wasmparser"]
 
 # equivalent = []  # alias/shortcut to --example; nothing more - other features will not apply.
@@ -109,13 +109,13 @@ walkdir = "2.5.0"
 
 # Optional plugin dependencies
 rhai = { version = "1.21.0", optional = true }
-mlua = { version = "0.8", features = ["lua54", "vendored"], optional = true }
+mlua = { version = "0.10", features = ["lua54", "vendored"], optional = true }
 wasmtime = { version = "31.0.0", optional = true }
 wasmtime-wasi = { version = "31", features = ["preview1"], optional = true }
 wasmparser = { version = "0.229.0", optional = true }
-scotch-host = { git = "https://github.com/davehorner/scotch.git", branch = "feature/long-live-scotch", package = "scotch-host", version = "0.1.0",optional = true }
-scotch-guest-macros = { git = "https://github.com/davehorner/scotch.git", branch = "feature/long-live-scotch", package = "scotch-guest-macros", version = "0.1.0",optional = true }
-scotch-host-macros  = { git = "https://github.com/davehorner/scotch.git", branch = "feature/long-live-scotch", package = "scotch-host-macros",  version = "0.1.0",optional = true }    
+# scotch-host = { git = "https://github.com/davehorner/scotch.git", branch = "feature/long-live-scotch", package = "scotch-host", version = "0.1.0",optional = true }
+# scotch-guest-macros = { git = "https://github.com/davehorner/scotch.git", branch = "feature/long-live-scotch", package = "scotch-guest-macros", version = "0.1.0",optional = true }
+# scotch-host-macros  = { git = "https://github.com/davehorner/scotch.git", branch = "feature/long-live-scotch", package = "scotch-host-macros",  version = "0.1.0",optional = true }    
 
 [target.'cfg(unix)'.dependencies]
 nix = "0.29.0"
