--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,5 +19,5 @@ jobs:
     - name: Build
       run: cargo build --verbose
     - name: Run tests
-      run: cargo test --verbose -- --skip test_bacon_help --skip test_bacon_version  --skip testgen_ex_builtin
+      run: cargo test --verbose -- --skip test_bacon_help --skip test_bacon_version  --skip testgen_ex_builtin --skip test_sample_count_in_testgen_ex_project
 
