--- a/cargo-e/Cargo.toml
+++ b/cargo-e/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cargo-e"
-version = "0.2.18"
+version = "0.2.19"
 edition = "2021"
 rust-version = "1.85.1"
 description = "e is for Example. A command-line tool for running and exploring source, examples, and binaries from Rust projects. It will run the first example, if no options are given."
@@ -114,6 +114,8 @@ wasmtime = { version = "31.0.0", optional = true }
 wasmtime-wasi = { version = "31", features = ["preview1"], optional = true }
 wasmparser = { version = "0.229.0", optional = true }
 glob = "0.3.2"
+git2 = "0.20.1"
+comfy-table = "7.1.4"
 # scotch-host = { git = "https://github.com/davehorner/scotch.git", branch = "feature/long-live-scotch", package = "scotch-host", version = "0.1.0",optional = true }
 # scotch-guest-macros = { git = "https://github.com/davehorner/scotch.git", branch = "feature/long-live-scotch", package = "scotch-guest-macros", version = "0.1.0",optional = true }
 # scotch-host-macros  = { git = "https://github.com/davehorner/scotch.git", branch = "feature/long-live-scotch", package = "scotch-host-macros",  version = "0.1.0",optional = true }    
