--- a/cargo-e/Cargo.toml
+++ b/cargo-e/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cargo-e"
-version = "0.2.20"
+version = "0.2.21"
 edition = "2021"
 rust-version = "1.85.1"
 description = "e is for Example. A command-line tool for running and exploring source, examples, and binaries from Rust projects. It will run the first example, if no options are given."
@@ -122,6 +122,7 @@ comfy-table = "7.1.4"
 
 [target.'cfg(unix)'.dependencies]
 nix = "0.29.0"
+libc = "0.2.172"
 
 [target.'cfg(windows)'.dependencies]
 windows = { version = "0.61.1", features = ["Win32", "Win32_System_Console", "Win32_Foundation", "Win32_System_SystemServices","Win32_Security","Win32_Security_Authorization"] }
