--- a/.github/workflows/release-plz.yml
+++ b/.github/workflows/release-plz.yml
@@ -23,6 +23,8 @@ jobs:
           token: ${{ secrets.RELEASE_PLZ_TOKEN }}
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
+      - name: Install speech-dispatcher development headers
+        run: sudo apt-get update && sudo apt-get install -y libspeechd-dev     
       - name: Run release-plz
         uses: release-plz/action@v0.5
         with:
