feat(e_window): Implement Window Pool Manager mode
This commit introduces a new Window Pool Manager mode to the e_window application. This mode allows users to automatically maintain a specified number of e_window instances, which is particularly useful for testing, demonstrations, or scenarios requiring a persistent set of windows.

The core functionality includes:

--w-pool-cnt <N>: Launches a special pool manager GUI that ensures N child windows are always open.
--w-pool-rate <MS>: Sets the minimum delay (in milliseconds) between spawning new windows in pool manager mode (defaults to 1000ms).
--w-pool-ndx <N>: (Internal) Used by the manager to assign a unique index to each child window.
--manager-hwnd <HWND>: (Internal) Passes the HWND of the pool manager to child windows for tracking.
The pool manager GUI, which stays on top, displays the current status of the window pool and automatically re-spawns any closed child windows to maintain the desired count. Closing the pool manager window will also close all managed child windows.

Additionally, this commit refines existing argument parsing and updates the README.md to document the new pool manager mode and its options.

Key Changes:

Cargo.toml: Added sysinfo dependency for potential future system information needs (though not directly used in the initial pool manager implementation, it aligns with broader tool capabilities).
README.md: Updated to include detailed documentation for the new Pool Manager Mode, its functionality, options, and an example usage. Removed the cargo install --workspace --bins instruction as it's less relevant for this specific addition.
src/app.rs:
Minor formatting adjustments for consistency.
Updated start_datetime formatting.
Clarified and refined message box usage.
src/lib.rs:
Implemented the core logic for parsing new pool-related command-line arguments (--w-pool-cnt, --w-pool-rate, --w-pool-ndx).
Introduced the pool_manager module and integrated its run_pool_manager function when --w

--- a/addendum/e_window/Cargo.toml
+++ b/addendum/e_window/Cargo.toml
@@ -2,7 +2,7 @@
 name = "e_window"
 description = "A window tool. Think WinAPI ShowMessageBox; but more than that."
 license = "MIT"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["David Horner"]
 edition = "2021"
 publish = true
@@ -15,5 +15,6 @@ egui = { version= "0.31.1",features=["persistence","serde","log"]}
 getargs = "0.5.0"
 serde = { version = "1.0.219", features = ["derive"] }
 shell-words = "1.1.0"
+sysinfo = "0.35.1"
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3", features = ["winuser"] }
