--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,4 @@
 [workspace]
 resolver = "2"
-members = ["cargo-e","addendum/e_crate_version_checker", "addendum/e_ai_summarize", "addendum/e_window"]
+members = ["cargo-e","addendum/e_crate_version_checker", "addendum/e_ai_summarize", "addendum/e_window","addendum/e_obs"]
 exclude = ["addenda"]
