feat(cli): add --scan-dir flag to recursively discover and run targets in subdirectories
- Implements directory scanning logic to find Cargo.toml files and extract targets
- Supports both sequential and parallel scanning (behind `concurrent` feature)
- Integrates scanned targets into the main execution flow
- Gracefully skips irrelevant directories like target/ and node_modules/
- Minor refactors and cleanup to support feature integration
- New --scan-dir flag:
  - Recursively finds Cargo.toml files and runs all valid targets (examples, binaries).
  - Skips target/, node_modules/, and build/ directories by default.
  - Falls back to sequential scanning if concurrent feature is disabled.

- Simplified --example invocation:
  - --manifest-path is no longer explicitly passed.
  - Instead, execution is run from the target's manifest directory.

- Suppressed update message in non-interactive mode:
  - Message "Non-interactive mode detected; skipping update prompt." is now hidden unless debugging.

- Improved Ctrl+C behavior:
  - Double Ctrl+C (within 500ms) exits immediately for fast cancellation.

- Run history fallback:
  - If find_manifest_dir() fails, falls back to std::env::current_dir().

- Target display format enhanced:
  - Targets now include relative manifest path prefix when scanning multiple manifests.

- Manifest directory setting:
  - execution_dir is now preferred over --manifest-path for more accurate context during runs.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,9 @@
 [workspace]
 resolver = "2"
-members = ["cargo-e","addendum/e_crate_version_checker", "addendum/e_ai_summarize", "addendum/e_window","addendum/e_obs"]
+members = [
+  "cargo-e",
+  "addendum/e_crate_version_checker",
+  "addendum/e_ai_summarize",
+  "addendum/e_window",
+] # ,"addendum/e_obs"]
 exclude = ["addenda"]
