feat(detached): add support for detached mode with hold and delay options
- Added `--detached`, `--detached-hold`, and `--detached-delay` CLI options to `cargo-e`
- Updated `CargoCommandBuilder` to support detached execution flow, including hold/delay timers
- Improved process management with support for timeout and forced termination of detached processes
- Integrated detached execution logic with `run_all_examples`, TUI, and CLI loop modes
- Enhanced compatibility with `startt` tool and fallback to `cmd /c start` for Windows
- Added workspace feature detection trace for debugging
- Includes `support/release.ps1` and `release.cmd` scripts for automated tagging and changelog commit
- stop recursive stack overflow when member is "."
- NOTE: detached has only really been tested on windows.  Additional
  testing to follow.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ members = [
   "addendum/e_crate_version_checker",
   "addendum/e_ai_summarize",
   "addendum/e_window",
-] # ,"addendum/e_obs"]
+  "addendum/e_obs",
+]
 exclude = ["addenda"]
