feat(e_window_e_grid_demo01): e_midi and e_grid demo.
This commit introduces several enhancements to the `e_window` examples, focusing on dynamic UI adjustments and more robust Chrome window management with MIDI integration.

Key changes include:

- **Dynamic Label Height Calculation:** The `position_grid_demo.rs` example now dynamically calculates the label height based on the Egui `TextStyle::Heading` font. This replaces the hardcoded `32.0` value, improving UI adaptability.
- **Improved Chrome Window Monitoring:** In `position_grid_demo.rs`, a check using `winapi::um::winuser::IsWindow` is added to continuously verify if the pinned Chrome window is still valid. If the window is closed, the application exits, preventing errors.
- **Enhanced Title Bar Height Calculation:** The `title_bar_height` in `position_grid_demo.rs` now accounts for the dynamically calculated label height, plus an additional padding, for more accurate window positioning.
- **New `e_window_e_grid.rs` Example:** A new example `e_window_e_grid.rs` is introduced, demonstrating a more comprehensive integration of Chrome grid pinning with MIDI event playback. This example:
    - Launches Chrome pinned to a grid.
    - Handles move, resize, and focus events for the Chrome HWND.
    - Plays MIDI songs in response to window events (focus, move, resize start/stop).
    - Includes detailed logging and comments for better understanding.
    - Features in-process E-grid server startup if not already running.
    - Manages Chrome process lifecycle, including termination on Ctrl-C.
- **Mouse Click Injection:** The new `e_window_e_grid.rs` includes functionality to send simulated mouse clicks to specific cells within the grid, with a delay for visual confirmation.
- **Use of `dashmap` and `once_cell`:** The new `e_window_e_grid.rs` utilizes `dashmap` for concurrent access to song mapping and `once_cell::sync::Lazy` for static, lazily initialized global state (like `PINNED_HWND_MAP` and `CHROME_WINDOW_INFO_MA

--- a/.github/workflows/release-plz.yml
+++ b/.github/workflows/release-plz.yml
@@ -24,7 +24,9 @@ jobs:
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
       - name: Install speech-dispatcher development headers
-        run: sudo apt-get update && sudo apt-get install -y libspeechd-dev     
+        run: sudo apt-get update && sudo apt-get install -y libspeechd-dev
+      - name: Install ALSA development libraries
+        run: sudo apt-get update && sudo apt-get install -y libasound2-dev  
       - name: Run release-plz
         uses: release-plz/action@v0.5
         with:
