--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,6 +17,8 @@ jobs:
     steps:
     - name: Install speech-dispatcher development headers
       run: sudo apt-get update && sudo apt-get install -y libspeechd-dev
+    - name: Install ALSA development libraries
+      run: sudo apt-get update && sudo apt-get install -y libasound2-dev
     - uses: actions/checkout@v4
     - name: Build
       run: cargo build --verbose
