--- a/addendum/e_window/Cargo.toml
+++ b/addendum/e_window/Cargo.toml
@@ -3,7 +3,7 @@ edition = "2021"
 name = "e_window"
 description = "A window tool. Think WinAPI ShowMessageBox; but more than that."
 license = "MIT"
-version = "0.1.11"
+version = "0.1.12"
 authors = ["David Horner"]
 publish = true
 
@@ -24,11 +24,17 @@ sysinfo = "0.35"
 which = "8.0.0"
 winit = "0.30.11"
 tempfile = "3.20.0"
+#e_grid = { path = "e_grid"}
+dashmap = "6.1.0"
+e_midi = "0.1.11"
+once_cell = "1.21.3"
+rand = "0.9.1"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3", features = ["winuser","processthreadsapi"] }
 eframe = { version = "0.32.0", features = ["persistence", "serde"] }
 windows = "0.61.3"
+e_grid = "0.1.8"
 
 [lib]
 name = "e_window"
